@@ -578,35 +578,14 @@ name|this
 argument_list|)
 throw|;
 block|}
-specifier|final
-name|String
-name|newResourceDescription
-init|=
-operator|(
-name|sliceDescription
-operator|==
-literal|null
-operator|)
-condition|?
-name|toString
-argument_list|()
-else|:
-operator|(
-name|toString
-argument_list|()
-operator|+
-literal|" [slice="
-operator|+
-name|sliceDescription
-operator|+
-literal|"]"
-operator|)
-decl_stmt|;
 return|return
 operator|new
 name|RAMInputStream
 argument_list|(
-name|newResourceDescription
+name|getFullSliceDescription
+argument_list|(
+name|sliceDescription
+argument_list|)
 argument_list|,
 name|file
 argument_list|,
