@@ -499,7 +499,10 @@ return|return
 operator|new
 name|SimpleFSIndexInput
 argument_list|(
+name|getFullSliceDescription
+argument_list|(
 name|sliceDescription
+argument_list|)
 argument_list|,
 name|channel
 argument_list|,
