@@ -4945,6 +4945,154 @@ literal|true
 argument_list|)
 expr_stmt|;
 block|}
+comment|// LUCENE-6311: make sure the resource name inside a compound file confesses that it's inside a compound file
+DECL|method|testResourceNameInsideCompoundFile
+specifier|public
+name|void
+name|testResourceNameInsideCompoundFile
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|String
+name|subFile
+init|=
+literal|"_123.xyz"
+decl_stmt|;
+name|createSequenceFile
+argument_list|(
+name|dir
+argument_list|,
+name|subFile
+argument_list|,
+operator|(
+name|byte
+operator|)
+literal|0
+argument_list|,
+literal|10
+argument_list|)
+expr_stmt|;
+name|SegmentInfo
+name|si
+init|=
+name|newSegmentInfo
+argument_list|(
+name|dir
+argument_list|,
+literal|"_123"
+argument_list|)
+decl_stmt|;
+name|si
+operator|.
+name|setFiles
+argument_list|(
+name|Collections
+operator|.
+name|singletonList
+argument_list|(
+name|subFile
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|si
+operator|.
+name|getCodec
+argument_list|()
+operator|.
+name|compoundFormat
+argument_list|()
+operator|.
+name|write
+argument_list|(
+name|dir
+argument_list|,
+name|si
+argument_list|,
+name|IOContext
+operator|.
+name|DEFAULT
+argument_list|)
+expr_stmt|;
+name|Directory
+name|cfs
+init|=
+name|si
+operator|.
+name|getCodec
+argument_list|()
+operator|.
+name|compoundFormat
+argument_list|()
+operator|.
+name|getCompoundReader
+argument_list|(
+name|dir
+argument_list|,
+name|si
+argument_list|,
+name|IOContext
+operator|.
+name|DEFAULT
+argument_list|)
+decl_stmt|;
+name|IndexInput
+name|in
+init|=
+name|cfs
+operator|.
+name|openInput
+argument_list|(
+name|subFile
+argument_list|,
+name|IOContext
+operator|.
+name|DEFAULT
+argument_list|)
+decl_stmt|;
+name|String
+name|desc
+init|=
+name|in
+operator|.
+name|toString
+argument_list|()
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"resource description hides that it's inside a compound file: "
+operator|+
+name|desc
+argument_list|,
+name|desc
+operator|.
+name|contains
+argument_list|(
+literal|"[slice="
+operator|+
+name|subFile
+operator|+
+literal|"]"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|cfs
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 end_class
 
